--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.1.3",
+    "countup.js": "^2.3.2",
+    "echarts": "^5.4.0",
     "element-plus": "^2.2.19",
     "eslint-plugin-prettier": "^4.2.1",
     "less": "^4.1.3",
